--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18.3.1"
+    "express": "^4.19.2"
   }
 }
